<resources>
    <string name="app_name">AOS</string>
    <string name="dummy_string">더미</string>
    <string name="home">홈</string>
    <string name="reserve_list">예약 현황</string>
    <string name="chat">채팅</string>
    <string name="my_page">마이페이지</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="request_input_id">아이디를 입력해주세요.</string>
    <string name="double_check">중복 확인</string>
    <string name="request_input_password">비밀번호를 입력해주세요.</string>
    <string name="nickname">닉네임</string>
    <string name="request_input_nickname">닉네임을 입력해주세요.</string>
    <string name="email">이메일</string>
    <string name="request_input_email">이메일을 입력해주세요.</string>
    <string name="seat">좌석</string>
    <string name="seat_number">좌석번호</string>
    <string name="seating_chart">좌석 배치도</string>
    <string name="estimatedTime">예상 소요 시간</string>
    <string name="time">시간</string>
    <string name="recruitment_status">모집 현황</string>
    <string name="cost">금액</string>
    <string name="krw">원</string>
    <string name="departure">출발</string>
    <string name="expected">(예정)</string>
    <string name="arrival">도착</string>
    <string name="driver_info">기사정보</string>
    <string name="driver_name">성함</string>
    <string name="agency">소속</string>
    <string name="contact">연락처</string>
    <string name="license_plate">번호판</string>
    <string name="participate_in_route_chatting">노선 채팅방 참여</string>
    <string name="check_ticket">티켓 확인</string>
    <string name="cancle_reservation">예매 취소</string>
    <string name="no_driver">아직 기사님이 배차되지 않았습니다.</string>
    <string name="share">공유하기</string>
    <string name="real_time_bus_location">실시간 버스 위치</string>
    <string name="check_bus_location">버스 위치 확인</string>
    <string name="total">전체</string>
    <string name="seat_unit">석</string>
    <string name="leftover">잔여</string>
    <string name="selection_complete">선택완료</string>
    <string name="total_price">총 결제금액</string>
    <string name="driver_seat">운전석</string>
    <string name="entrance">출입구</string>
    <string name="make_payment">결제하기</string>
    <string name="payment_notice">결제를 완료 해야 승차권 구매가 완료 됩니다.\n마감 기한 까지 출발 미확정 시 환불 됩니다.</string>
    <string name="move_to_home">홈으로 이동</string>
    <string name="move_to_reserve_status">예약 내역 이동</string>
    <string name="complete_payment_phase">결제가 완료되었습니다.</string>

    <string name="search">검색</string>
    <string name="popular_article_title">HOT DUCK</string>
    <string-array name="category_sort_list">
        <item>인기순</item>
        <item>최신순</item>
    </string-array>
    <string-array name="article_detail_sort_list">
        <item>인원순</item>
        <item>최신순</item>
    </string-array>
    <string name="select_start_region">출발 지역 선택</string>
    <string name="entire">전체</string>
    <string name="route">노선</string>
    <string name="seoul">서울</string>
    <string name="gyeonggi">경기</string>
    <string name="incheon">인천</string>
    <string name="kangwon">강원</string>
    <string name="daejeon">대전</string>
    <string name="sejong">세종</string>
    <string name="busan">부산</string>
    <string name="make_route">노선 개설</string>
    <string name="detail_info">상세정보</string>
    <string name="concert_info">콘서트 정보</string>
    <string name="dummy_concert_title">EXO PLANET ＃3 - The EXO\'rDIUM</string>
    <string name="select_course">경로 선택</string>
    <string name="select">선택</string>
    <string name="price">가격</string>
    <string name="opened">개설하기</string>
    <string name="join">신청하기</string>
    <string name="select_bus">버스 선택</string>
    <string name="chat_message_hint">메시지를 입력하세요</string>
    <string name="chat_room_name">채팅방 이름</string>
    <string name="chat_fragment_title">채팅</string>
    <string name="chat_center_message">center message</string>
    <string name="chat_first_left_nickname">닉네임</string>
    <string name="chat_first_left_message">left message</string>
    <string name="chat_first_left_time">시간</string>
    <string name="chat_left_message">left message</string>
    <string name="chat_left_time">시간</string>
    <string name="chat_right_message">right message</string>
    <string name="chat_right_time">시간</string>
    <string name="place">장소</string>
    <string name="period">기간</string>
    <string name="age_grade">꽌람연령</string>
    <string name="all_grade">전체 관람가</string>

</resources>