<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity">
        <!--타이틀-->
        <View
            android:id="@+id/header_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/icon_back"
            app:layout_constraintBottom_toBottomOf="@id/header_top"
            app:layout_constraintStart_toStartOf="@id/header_top"
            app:layout_constraintTop_toTopOf="@id/header_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/header_top"
            app:layout_constraintEnd_toEndOf="@id/header_top"
            app:layout_constraintStart_toStartOf="@id/header_top"
            app:layout_constraintTop_toTopOf="@id/header_top" />
        <!--end 타이틀-->

        <TextView
            android:id="@+id/id_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_top" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_text_field"
            style="@style/common_box_style"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:boxStrokeColor="@color/main"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@id/double_check_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_input_id"
                android:textColor="@color/black"
                android:textColorHint="@color/gray200"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/double_check_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dp"
            android:text="@string/double_check"
            android:textColor="@color/main"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_text"
            app:strokeColor="@color/main"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/double_check_btn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_field"
            style="@style/common_box_style"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:boxStrokeColor="@color/main"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_input_password"
                android:textColor="@color/black"
                android:textColorHint="@color/gray200"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/nickname_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/nickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_text_field" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nickname_text_field"
            style="@style/common_box_style"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:boxStrokeColor="@color/main"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nickname_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_input_nickname"
                android:textColor="@color/black"
                android:textColorHint="@color/gray200"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nickname_text_field" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_field"
            style="@style/common_box_style"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:boxStrokeColor="@color/main"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_input_email"
                android:textColor="@color/black"
                android:textColorHint="@color/gray200"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/main"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>