<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/chatMessageNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_first_left_nickname"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/chatMessageMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_first_left_message"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="10dp"
            android:background="@drawable/chat_message_left_style"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/chatMessageNickname"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/chatMessageNickname" />

        <TextView
            android:id="@+id/chatMessageTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_first_left_time"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/chatMessageMessage"
            app:layout_constraintLeft_toRightOf="@id/chatMessageMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>