<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.softeer.togeduck.ui.home.article_detail.ArticleDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.article_detail.ArticleDetailFragment">

        <TextView
            android:id="@+id/articleDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{vm.articleDetail.title}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/placeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineContents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.37" />

        <TextView
            android:id="@+id/placeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            app:layout_constraintBottom_toTopOf="@id/periodText"
            app:layout_constraintEnd_toStartOf="@id/guidelineContents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/articleDetailTitle" />

        <TextView
            android:id="@+id/articleDetailPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{vm.articleDetail.location}"
            app:layout_constraintBottom_toTopOf="@id/articleDetailDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guidelineContents"
            app:layout_constraintTop_toBottomOf="@id/articleDetailTitle" />

        <TextView
            android:id="@+id/periodText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period"
            app:layout_constraintBottom_toTopOf="@id/ageText"
            app:layout_constraintEnd_toStartOf="@id/articleDetailPlace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeText" />

        <TextView
            android:id="@+id/articleDetailDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{vm.articleDetail.startedAt + `~` + vm.articleDetail.startedAt}"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/articleDetailAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guidelineContents"
            app:layout_constraintTop_toBottomOf="@id/articleDetailPlace" />

        <TextView
            android:id="@+id/ageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_grade"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineContents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/periodText" />

        <TextView
            android:id="@+id/articleDetailAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all_grade"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guidelineContents"
            app:layout_constraintTop_toBottomOf="@id/articleDetailDate" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>